# periodic-elements

./: Cargo.toml
src/: lib.rs  raw.rs
src/parts/: block.rs  bonding_type.rs  electron_configuration.rs  ion_radius.rs  mass.rs  mod.rs  orbital.rs  state.rs  subshell_labels.rs  year.rs
