[package]
name = "periodic-elements"
description = "A list of elements in the periodic table, with focus on no_std"
version = "1.0.0"
authors = ["lights0123 <developer@lights0123.com>"]
repository = "https://github.com/lights0123/periodic-elements"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rgb = "0.8.12"

[features]
default = ["std"]
std = []
